# dbt-core-dev

./: CONTRIBUTING.md  README.md  pyproject.toml  sources_example.yaml
.github/: pull_request_template.md
dbt_sandbox/: .gitignore  README.md  dbt_project.yaml  dbt_project.yml
dbt_sandbox/macros/: generate_schema_name.sql
dbt_sandbox/models/dataset_name/: model_name.yml
dbt_sandbox/models/telemetry_derived/: test_newtab_interactions_hourly_v1.sql  test_newtab_interactions_hourly_v1.yml
